# aoc-2023

./: Cargo.toml
src/: challenges.rs  day.rs  fetch_input.rs  input.rs  main.rs
src/challenges/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
