[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
rstest = "0.18.2"
